tests/compound_literal_infer_non_aggregate_bad.hop
// Verifies compound literal inference non aggregate is rejected.
fn main() {
	var x i32 = { value: 1 }
	_ = x
}
